Fix spacing between settings

--- a/modules/portmaster/src/app/shared/config/config-settings.scss
+++ b/modules/portmaster/src/app/shared/config/config-settings.scss
@@ -34,7 +34,8 @@
 
     app-generic-setting {
       width: 100%;
-      padding-top: 2.5rem;
+      padding-top: 1.5rem;
+      margin-top: 1rem;
 
       /*
       FIXME:
